# brand-name-gen

./: .env  .env.example  .gitignore  404.html  AGENTS.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml
api/: index.html
context/: README.md
context/design/: README.md
context/hints/: README.md  howto-call-llm-with-litellm-custom-base.md  howto-check-brand-availability.md  howto-check-domain-availability-programmatically.md  howto-ensure-android-app-title-uniqueness.md  howto-use-appfollow-python.md  howto-use-dataforseo-google-serp-api.md  howto-use-tavily-python.md
context/instructions/: README.md
context/logs/: 2025-10-04_untrack-dotenv.md  README.md
context/plans/: README.md
context/refcode/: README.md
context/roles/: README.md
context/summaries/: README.md
context/tasks/: README.md  task-app-title-unique.md  task-check-domain-available.md  task-dataforseo-integrate-api.md  task-evaluate-brand-uniqueness.md
context/tasks/features/: README.md
context/tasks/fixes/: README.md
context/tasks/refactor/: README.md  task-refactor-src-structure-into-functional-submodules.md
context/tasks/tests/: README.md
context/tools/: README.md
docs/: api.md  domain-availability.md  index.md  llm.md  usage.md
domain-availability/: index.html
examples/: brand-name-gen-config.yaml  evaluate_uniqueness_demo.py
llm/: index.html
scripts/: README.md  demo_check_unique_advanced.py  demo_check_unique_simple.py
src/brand_name_gen/: __init__.py  cli.py  core.py  domain_check.py  domain_checker.py  title_check.py  title_checker.py
src/brand_name_gen/android/: __init__.py  title_check.py  title_checker.py
src/brand_name_gen/domain/: __init__.py  domain_check.py  domain_checker.py
src/brand_name_gen/evaluate/: config.py  defaults.py  evaluator.py  matcher.py  providers.py  scoring.py  types.py
src/brand_name_gen/search/: __init__.py
src/brand_name_gen/search/dataforseo/: __init__.py  backends.py  google_rank.py  types.py
src/brand_name_gen/utils/: env.py
tests/: test_basic.py  test_cli.py  test_cli_android.py  test_cli_android_play.py  test_cli_dataforseo.py  test_dataforseo_sdk_api.py  test_domain_check.py  test_env_utils.py  test_title_check.py
usage/: index.html
